--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-psycopg2-binary==2.9.3
 asgiref==3.5.2
 boto3==1.24.44
 botocore==1.27.44
@@ -10,10 +9,14 @@ djangorestframework-simplejwt==5.2.0
 filelock==3.7.1
 gunicorn==20.1.0
 jmespath==1.0.1
+mysql-connector-python==8.0.32
 Pillow==9.2.0
 platformdirs==2.5.2
+protobuf==3.20.3
+psycopg2-binary==2.9.3
 pygame==2.1.2
 PyJWT==2.4.0
+PyMySQL==1.0.2
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.1
